--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = ""
+baseURL = "portfolie.vbang.one"
 languageCode = "en-us"
-title = "Edna West"
+title = "Portfolie 10fri"
 theme = "personal-web"
 copyright="© Edna West"
 googleAnalytics = ""
