--- a/config.toml
+++ b/config.toml
@@ -42,20 +42,20 @@ pygmentsCodeFences=true
 [params.sidebar]
   backgroundImage = '' # header background image - default "/images/default_sidebar.jpg" - Photo by Tim Marshall on Unsplash
   gradientOverlay = '' # default: rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-  logo = "" # - default "/images/edna-west.jpg"
+  logo = "/images/Jonas.jpg" # - default "/images/edna-west.jpg"
 [params.assets]
   favicon = ""
   customCSS = ""
 
 [params.social]
-  github = "https://github.com/"
+  github = "https://github.com/JVindahl"
   #twitter = "https://twitter.com/"
   #linkedin = "https://www.linkedin.com/in/"
   #medium = "https://medium.com/"
   #codepen = "https://codepen.io/"
   #facebook = "https://www.facebook.com/"
-  youtube = "https://www.youtube.com/"
-  instagram = "https://www.instagram.com/"
+  youtube = "https://www.youtube.com/channel/UCcBFkSW4dIZDjkf4M5IhYkw"
+  instagram = "https://www.instagram.com/jonas_vbang"
   #gitlab = "https://gitlab.com/"
   #keybase = "https://keybase.io/"
 
